# ubiquity_motor

./: .gitignore  .travis.yml  CHANGELOG.rst  CMakeLists.txt  Firmware_and_Hardware_Revisions.md  LICENSE  README.md  Serial_Protocol.md  package.xml  ubiquity_motor.sublime-workspace
.github/workflows/: ros-kinetic.yml  ros-noetic.yml  ros.yml
Debug/: makefile  objects.mk  ubiquity_motor
Debug/src/: CRC.d  MotorController.d  MotorMessage.d  subdir.mk  ubiquity_motor.d
cfg/: PID.cfg  PIDConfig.cfg
conf/: ubiquity_motor.yaml
docs/: 0000-move-to-boost-asio-serial.md  serial-protocol.md
firmware/: v35_20190815_enc.cyacd  v37-rc1.cyacd  v38_beta20200909_enc.cyacd  v38_beta20201006_enc.cyacd  v39_beta20201129_enc.cyacd  v40_20201209_enc.cyacd  v41_beta4wd20210422_enc.cyacd  v43_20210829_enc.cyacd  v45_20231105_enc.cyacd
include/ubiquity_motor/: MotorCallbackInterface.h  MotorCommand.h  MotorDriver.h  MotorHardware.h  MotorSerial.h  UbiquityMotorCommand.h  UbiquityMotorSerial.h  motor_command.h  motor_hardware.h  motor_message.h  motor_parameters.h  motor_parmeters.h  motor_serial.h  shared_queue.h
launch/: #ur_motor.launch#
msg/: Leds.msg  MotorState.msg
scripts/: McbController.ino  system_info.py  test_motor_board.py  test_pi_gpio.py  test_velocity.py  upgrade_firmware.py
src/: .probe_robot.cc.swo  .probe_robot.cc.swp  CRC.cpp  CRC.h  MotorCommand.cc  MotorController.cpp  MotorController.h  MotorMessage.cpp  MotorMessage.h  MotorSerial.cc  UbiquityMotor.cc  UbiquityMotor.h  UbiquityMotorCommand.cc  UbiquityMotorSerial.cc  crc8.c  crc8.h  motor_command.cc  motor_hardware.cc  motor_message.cc  motor_node.cc  motor_serial.cc  probe_robot.cc  protocol.h  robot_id.cc  ubiquity_motor.cpp
test/: .motor_hardware_test.cc.swp  MotorTest.cpp  motor_command_test.cc  motor_hardware_test.cc  motor_message_test.cc  motor_parameter_test.cc  motor_serial_test.cc  motor_test.cc  shared_queue_test.cc
test/rostest/: motor_hardware.test  motor_parameters.test
test/unit/: motor_message_test.cc
