<?xml version="1.0"?>
<package format="2">
  <name>ubiquity_motor</name>
  <version>0.3.2</version>
  <description>Provides a ROS interface to Ubiquity Robotics motor controllers</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="rohan@aleopile.com">Rohan Agrawal</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend> 
  <depend>geometry_msgs</depend>
  <depend>tf</depend>
  <depend>nav_msgs</depend>
  <depend>serial</depend>
  <depend>hardware_interface</depend>
  <depend>controller_manager</depend>
  <exec_depend>diff_drive_controller</exec_depend>
  <exec_depend>joint_state_controller</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
