<?xml version="1.0"?>
<package format="2">
  <name>ubiquity_motor</name>
  <version>0.14.1</version>
  <description>Provides a ROS interface to Ubiquity Robotics Magni motor controllers</description>

  <maintainer email="rohan@aleopile.com">Rohan Agrawal</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
 <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <test_depend>rostest</test_depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf</depend>
  <depend>nav_msgs</depend>
  <depend>hardware_interface</depend>
  <depend>controller_manager</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>diagnostic_updater</depend>
  <build_export_depend>message_runtime</build_export_depend>
  <exec_depend>diff_drive_controller</exec_depend>
  <exec_depend>joint_state_controller</exec_depend>
  <exec_depend>python3-requests</exec_depend>

</package>
